--- a/templates/course/course_list.html
+++ b/templates/course/course_list.html
@@ -16,7 +16,7 @@
    <td>{{ forloop.counter }}</td>
    <td><a href="{% url 'course:lessons_list' course.id%}">{{ course.title }}</a></td>
    <td>{{ course.user.username }}</td>
-   <td>{% if course.description %} {{ course.description| slice:'70'|linebreaks }} {% else %}暂空，坐等更新</td>{% endif %}
+   <td>{% if course.overview %} {{ course.overview| slice:'70'|linebreaks }} {% else %}暂空，坐等更新</td>{% endif %}
    <td>{{ course.created| date:"Y-m-d" }}</td>
 </tr>
 
