--- a/templates/header.html
+++ b/templates/header.html
@@ -20,7 +20,7 @@
                         <button type="button" class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown">{{ user.username }}<span class="caret"></span>
                        </button>
                         <ul class="dropdown-menu" role="menu">
-                             <li><a href="{% url 'account:password_change' %}">修改密码</a></li>
+                             <li><a href="{% url 'account:new_password_change' %}">修改密码</a></li>
                              <li><a href="{% url 'account:my_information' %}">个人信息</a></li>
                              <li><a href="{% url 'article:article_column' %}">后台管理</a></li>
                         </ul>
