--- a/templates/article/list/author_articles.html
+++ b/templates/article/list/author_articles.html
@@ -33,8 +33,8 @@
 </div>
 
 <div>
-    <p>{{ user.username }}</p>
-    <p>共发表{% author_total_articles user %}篇文章。</p>
+    <p>{{ user_to_show.username }}</p>
+    <p>共发表{% author_total_articles user_to_show %}篇文章。</p>
     {% if userinfo %}
         <p>{{ userinfo.company }}</p>
         <p>{{ userinfo.aboutme }}</p>
