add hints and feedbacks for user-password-change

--- a/templates/account/password_change_fail.html
+++ b/templates/account/password_change_fail.html
@@ -2,6 +2,6 @@
 {% block title %}password change done {% endblock %}
 {% block content %}
 <div class="row text-center vertical-middle-sm">
-<p>密码修改成功！<p>
+<p><strong>密码修改失败！o(╯□╰)o</strong> <br> 原因是：{{ mistake }} ~<p>
 </div>
 {% endblock %}
