--- a/templates/account/password_change_form.html
+++ b/templates/account/password_change_form.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-{% block title %}password change{% endblock %}
+{% block title %}Change Password{% endblock %}
 {% block content %}
 <div class="row text-center vertical-middle-sm">
-    <h1>Change Password</h1>
-    <p>Please enter your old password, for security's sake, and then enter your new password twice.</p>
+    <h1>修改密码</h1>
+    <p>为了保证安全，请先输入旧密码，然后输入新密码两次~</p>
     {% if form.new_password1.help_text %}
 <div class="text-left" style="margin-left:400px">
     <p>{{ form.new_password1.help_text|safe }} </p>
