--- a/templates/paginator.html
+++ b/templates/paginator.html
@@ -6,7 +6,7 @@
     {% endif %}
 
     <span class="current">
-    Page {{ page.number }} of {{ page.paginator.num_pages }}
+    Page <strong>{{ page.number }}</strong> of <strong>{{ page.paginator.num_pages }}</strong>
     </span>
     
     {% if page.has_next %}
