--- a/templates/article/list/article_titles.html
+++ b/templates/article/list/article_titles.html
@@ -10,7 +10,7 @@
     <p> 
     <form id="form1" action="{% url 'article:article_search' %}" method="POST" class="form-horizontal" role="form">{% csrf_token %}
     <!--<span style="margin-left:20px" class="glyphicon glyphicon-search"></span>-->
-{{ search_form.keywords }}  按{{ search_form.by_which }}      开始日期{{ search_form.date_st }} 结束日期{{ search_form.date_ed }}
+搜索关键字{{ search_form.keywords }}  按{{ search_form.by_which }}   开始日期{{ search_form.date_st }} 结束日期{{ search_form.date_ed }}
 
     </p>
      <p class="text-center">
@@ -22,7 +22,8 @@
 </div>
 
 
-<div class="container">
+<div class="mid-container">
+<div class="article-container">
     {% for article in articles %}
         <div class="list-group">
             <a href="{{ article.get_url_path }}" class="list-group-item active">
@@ -33,6 +34,7 @@
         </div>
     {% endfor %}
 
+</div>
 <strong>{% total_articles %}</strong> Articles Total,
 {% include "paginator.html" %} 
 </div>
@@ -45,19 +47,42 @@
  });
         $.ajax({
             url:"{% url 'article:article_search' %}",
+            dataType:"json", 
             type:"POST",
             data: $('#form1').serialize(),
-            success:function(r){
-                e=r['status']
-                if(e=="1"){
-                layer.msg("感谢点赞");
-                window.location.reload();
-                }else if(e=="2"){
-                layer.msg("我会继续努力");
-                window.location.reload();
-                }else{
-                layer.msg("怎么了");
-                window.location.assign(e);
+            success:function(data){
+                var status = data.status;
+                // console.log(data)
+                if(status=='1'){
+                var html = "";
+                $(".mid-container").empty();
+                if (data.articles.length){
+                html += "<p>一共有"+data.articles.length+"个结果。</p>"; 
+                for(var i=0;i<data.articles.length;i++){
+                    title = data.articles[i][0];
+                    authorname = data.articles[i][1];
+                    article_url = data.articles[i][3];
+                    body = data.articles[i][4];
+                    html+='<div class="list-group">'+
+            '<a href='+article_url+' class="list-group-item active">'+
+                '<h4 class="list-group-item-heading">'+title+'</h4>'+
+            '</a><p class="list-group-item-text">作者：<a href="/article/list-article-titles/'+authorname+'">'+authorname+'</a></p>'+
+               '<p class="list-group-item-text">概要：'+body+'</p> </div>';
+
+                }
+               }
+               else{
+                 html += "抱歉，没有匹配的结果。"; 
+                } 
+                $(".mid-container").html(html);
+                }else if(status=='2')//NO results after search
+                 {
+                $(".article-container").parent().empty();
+                html += "抱歉，没有匹配结果。"
+                $(".article-container").parent().html(html);
+                }else//keywords is None
+                {
+                alert("关键字不能为空!");
 }
         },
     });
