--- a/templates/article/list/article_titles.html
+++ b/templates/article/list/article_titles.html
@@ -83,5 +83,12 @@
         },
     });
 }
+
+        $('#form1').bind('keydown',function(event){
+                if(event.keyCode == "13")    
+                {
+                    start_search();
+                }
+           });
 </script>
 {% endblock %}
