--- a/templates/article/list/article_detail.html
+++ b/templates/article/list/article_detail.html
@@ -5,7 +5,8 @@
 {% block title %}article detail {% endblock %}
 {% block content %}
 
-{% with total_likes=article.users_like.count users_like=article.users_like.all %}
+{% with total_likes=article.users_like.count users_like=article.users_like.all user_comments_count=article.user_comments.count total_comments_count=article.comments.count %}
+
 
 <div class="container">
 <div class="col-md-9">
@@ -47,22 +48,35 @@
 
 <hr>
 <div>
-    <h3><span class="glyphicon glyphicon-bullhorn"></span> 本文有{{ article.comments.count }}评论</h3>
+    <h3><span class="glyphicon glyphicon-bullhorn"></span> 本文有{{ article.comments.count|add:user_comments_count }}评论</h3>
+    {% if total_comments_count %}
     {% for comment in article.comments.all %}
     <div>
         <p><strong>{{ comment.commentator }}</strong>说：</p>
         <p style="margin-left:40px;">{{ comment.body }}</p>
     </div>
-    {% empty %}
-    <p>没有评论</p>
     {% endfor %}
+    {% for comment in article.user_comments.all %}
+    <div>
+        <p><strong>{{ comment.commentator }}</strong>说：</p>
+        <p style="margin-left:40px;">{{ comment.body }}</p>
+    </div>
+    {% endfor %}
+    {% else %}
+    <p>没有评论</p>
+    {% endif %}
 
     <h3><span class="glyphicon glyphicon-send"></span> 我有话要说……</h3>
     <form action="." method="POST" class="form-horizontal" role="form">{% csrf_token %}
-        <div class="form-group">
+        <div class="form-group" id="louzhu">
             <label for="inputEmail3" class="col-sm-2 control-label">楼主</label>
             <div class="col-sm-10">
                 {{ comment_form.commentator }}
+                {% if cur_user %}
+                    <font id="login_commentator" style="display:none;font-size:120%;color:lightblue;" nowrap> {{ cur_user.username }} &nbsp </font>
+                    <input id="ck1" type="checkbox" name="if_as_login" value="1" onclick="checkboxOnclick(this)">
+                    是否以{{ cur_user.username }}身份发表？
+                {% endif %}
             </div>
         </div>
         <div class="form-group">
@@ -161,6 +175,24 @@ $(function(){
 }
         },
     });
+}
+
+function checkboxOnclick(checkbox){
+    var commentator = document.getElementsByName('commentator')[0];
+    var login_commentator = document.getElementById('login_commentator');
+    var div_louzhu = document.getElementById('louzhu');
+    
+    if(document.getElementById("ck1").checked){
+    login_commentator.style.display="";
+    commentator.style.display="none";
+    commentator.required="False";
+    }
+    else
+        {
+    commentator.style.display="";
+    login_commentator.style.display="none";
+
+}
 }
 </script>
 {% endwith %}
