Fix: 更正my_message页面标题

--- a/templates/account/my_messages.html
+++ b/templates/account/my_messages.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Login{% endblock %}
+{% block title %}我的消息|评论与喜欢{% endblock %}
 
 {% block content %}
 <div class="row  vertical-middle-sm">
