--- a/templates/base.html
+++ b/templates/base.html
@@ -17,4 +17,15 @@
     {% block javascript %}
     {% endblock %}
 </body>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138748813-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-138748813-2');
+</script>
+
 </html>
