完善home页CSS，引入Bootstrap面板和栅格

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,19 @@
     <link rel="stylesheet"  href="{% static 'css/bootstrap.css' %}">
     <link rel="icon" href="../static/images/favicon.ico">
     <title>{% block title %}{% endblock %}</title>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="{% static 'css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
     {% include "header.html" %}
     <div class="container" >
-        <div style="padding: 60px 15px;">
+        <div style="padding-top: 60px;">
         {% block content %}
         {% endblock %}
         </div>
