网站底部新增RSS链接

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,11 @@
 <div class="container">
     <hr>
-    <p class="text-center">Copyright© 2019 @田田田田</p>
+    <div class="site-info" style="text-align: center">
+            Copyright© 2019&nbsp <a href ="https://github.com/tianwei1992">田田田田</a>
+             &nbsp | &nbsp 
+            <a href="{% url 'rss' %}">
+            <i class="glyphicon glyphicon-send"></i>
+             RSS</a>
+    </div>
 </div>
 
