--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,6 +6,10 @@
             <a href="{% url 'rss' %}">
             <i class="glyphicon glyphicon-send"></i>
              RSS</a>
+             &nbsp | &nbsp 
+            <a href="{% url 'sitemap' %}">
+            <i class="glyphicon glyphicon-map-marker"></i>
+             SiteMap</a>
     </div>
 </div>
 
